--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="starShip" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\starShip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon48_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon48-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
