--- a/Main.resx
+++ b/Main.resx
@@ -144,7 +144,7 @@
     <value>0</value>
   </data>
   <data name="searchBox.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 12pt, style=Bold</value>
+    <value>.PingFang SC, 12pt, style=Bold</value>
   </data>
   <data name="searchBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>617, 16</value>
@@ -184,13 +184,13 @@
     <value>True</value>
   </data>
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 20.25pt</value>
+    <value>.PingFang SC, 20.25pt</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>66, 10</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 38</value>
+    <value>96, 27</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -235,7 +235,7 @@
     <value>3</value>
   </data>
   <data name="searchIcon.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 12pt</value>
+    <value>Microsoft YaHei, 12pt</value>
   </data>
   <data name="searchIcon.Location" type="System.Drawing.Point, System.Drawing">
     <value>1065, 14</value>
@@ -262,7 +262,7 @@
     <value>4</value>
   </data>
   <data name="swithTheme.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 12pt</value>
+    <value>Microsoft YaHei, 12pt</value>
   </data>
   <data name="swithTheme.Location" type="System.Drawing.Point, System.Drawing">
     <value>1122, 14</value>
@@ -289,7 +289,7 @@
     <value>5</value>
   </data>
   <data name="message.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 12pt</value>
+    <value>Microsoft YaHei, 12pt</value>
   </data>
   <data name="message.Location" type="System.Drawing.Point, System.Drawing">
     <value>1179, 14</value>
@@ -316,7 +316,7 @@
     <value>6</value>
   </data>
   <data name="uiSymbolButton1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 12pt</value>
+    <value>Microsoft YaHei, 12pt</value>
   </data>
   <data name="uiSymbolButton1.Location" type="System.Drawing.Point, System.Drawing">
     <value>1236, 14</value>
@@ -343,7 +343,7 @@
     <value>7</value>
   </data>
   <data name="profile.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 18pt</value>
+    <value>Microsoft YaHei, 18pt</value>
   </data>
   <data name="profile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -658,62 +658,8 @@
   <data name="&gt;&gt;panelTop.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="&gt;&gt;copyRight.Name" xml:space="preserve">
-    <value>copyRight</value>
-  </data>
-  <data name="&gt;&gt;copyRight.Type" xml:space="preserve">
-    <value>Sunny.UI.UILabel, SunnyUI, Version=3.1.5.0, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb</value>
-  </data>
-  <data name="&gt;&gt;copyRight.Parent" xml:space="preserve">
-    <value>uiUserControl1</value>
-  </data>
-  <data name="&gt;&gt;copyRight.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;navMenuPanel.Name" xml:space="preserve">
-    <value>navMenuPanel</value>
-  </data>
-  <data name="&gt;&gt;navMenuPanel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;navMenuPanel.Parent" xml:space="preserve">
-    <value>uiUserControl1</value>
-  </data>
-  <data name="&gt;&gt;navMenuPanel.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="uiUserControl1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>微软雅黑, 12pt</value>
-  </data>
-  <data name="uiUserControl1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 70</value>
-  </data>
-  <data name="uiUserControl1.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>1, 1</value>
-  </data>
-  <data name="uiUserControl1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>200, 720</value>
-  </data>
-  <data name="uiUserControl1.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="uiUserControl1.Text" xml:space="preserve">
-    <value>uiUserControl1</value>
-  </data>
-  <data name="&gt;&gt;uiUserControl1.Name" xml:space="preserve">
-    <value>uiUserControl1</value>
-  </data>
-  <data name="&gt;&gt;uiUserControl1.Type" xml:space="preserve">
-    <value>Sunny.UI.UIUserControl, SunnyUI, Version=3.1.5.0, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb</value>
-  </data>
-  <data name="&gt;&gt;uiUserControl1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;uiUserControl1.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
   <data name="copyRight.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 12pt</value>
+    <value>.PingFang SC, 12pt</value>
   </data>
   <data name="copyRight.Location" type="System.Drawing.Point, System.Drawing">
     <value>6, 693</value>
@@ -763,6 +709,63 @@
   <data name="&gt;&gt;navMenuPanel.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="uiUserControl1.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft YaHei, 12pt</value>
+  </data>
+  <data name="uiUserControl1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 70</value>
+  </data>
+  <data name="uiUserControl1.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>1, 1</value>
+  </data>
+  <data name="uiUserControl1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 720</value>
+  </data>
+  <data name="uiUserControl1.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="uiUserControl1.Text" xml:space="preserve">
+    <value>uiUserControl1</value>
+  </data>
+  <data name="&gt;&gt;uiUserControl1.Name" xml:space="preserve">
+    <value>uiUserControl1</value>
+  </data>
+  <data name="&gt;&gt;uiUserControl1.Type" xml:space="preserve">
+    <value>Sunny.UI.UIUserControl, SunnyUI, Version=3.1.5.0, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb</value>
+  </data>
+  <data name="&gt;&gt;uiUserControl1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;uiUserControl1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="webBrowser1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
+    <value>Fill</value>
+  </data>
+  <data name="webBrowser1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="webBrowser1.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>20, 20</value>
+  </data>
+  <data name="webBrowser1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1125, 720</value>
+  </data>
+  <data name="webBrowser1.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;webBrowser1.Name" xml:space="preserve">
+    <value>webBrowser1</value>
+  </data>
+  <data name="&gt;&gt;webBrowser1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.WebBrowser, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;webBrowser1.Parent" xml:space="preserve">
+    <value>mainPanel</value>
+  </data>
+  <data name="&gt;&gt;webBrowser1.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="mainPanel.Location" type="System.Drawing.Point, System.Drawing">
     <value>208, 70</value>
   </data>
@@ -794,10 +797,46 @@
     <value>218, 17</value>
   </metadata>
   <data name="ContextMenuStrip.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 12pt</value>
+    <value>.PingFang SC, 12pt</value>
+  </data>
+  <data name="minimize.Font" type="System.Drawing.Font, System.Drawing">
+    <value>.PingFang SC, 12pt</value>
+  </data>
+  <data name="minimize.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 22</value>
+  </data>
+  <data name="minimize.Text" xml:space="preserve">
+    <value>Minimize </value>
+  </data>
+  <data name="maximize.Font" type="System.Drawing.Font, System.Drawing">
+    <value>.PingFang SC, 12pt</value>
+  </data>
+  <data name="maximize.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 22</value>
+  </data>
+  <data name="maximize.Text" xml:space="preserve">
+    <value>Maximize</value>
+  </data>
+  <data name="restart.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 22</value>
+  </data>
+  <data name="restart.Text" xml:space="preserve">
+    <value>Restart</value>
+  </data>
+  <data name="logout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 22</value>
+  </data>
+  <data name="logout.Text" xml:space="preserve">
+    <value>Log Out</value>
+  </data>
+  <data name="exist.Size" type="System.Drawing.Size, System.Drawing">
+    <value>146, 22</value>
+  </data>
+  <data name="exist.Text" xml:space="preserve">
+    <value>Exist</value>
   </data>
   <data name="ContextMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 134</value>
+    <value>147, 114</value>
   </data>
   <data name="&gt;&gt;ContextMenuStrip.Name" xml:space="preserve">
     <value>ContextMenuStrip</value>
@@ -976,42 +1015,6 @@
   </data>
   <data name="CSharpInc.Visible" type="System.Boolean, mscorlib">
     <value>True</value>
-  </data>
-  <data name="minimize.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 12pt</value>
-  </data>
-  <data name="minimize.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 26</value>
-  </data>
-  <data name="minimize.Text" xml:space="preserve">
-    <value>Minimize </value>
-  </data>
-  <data name="maximize.Font" type="System.Drawing.Font, System.Drawing">
-    <value>.萍方-简, 12pt</value>
-  </data>
-  <data name="maximize.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 26</value>
-  </data>
-  <data name="maximize.Text" xml:space="preserve">
-    <value>Maximize</value>
-  </data>
-  <data name="restart.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 26</value>
-  </data>
-  <data name="restart.Text" xml:space="preserve">
-    <value>Restart</value>
-  </data>
-  <data name="logout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 26</value>
-  </data>
-  <data name="logout.Text" xml:space="preserve">
-    <value>Log Out</value>
-  </data>
-  <data name="exist.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 26</value>
-  </data>
-  <data name="exist.Text" xml:space="preserve">
-    <value>Exist</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
